test/libsolidity/syntaxTests/pragma/empty_version.sol
pragma solidity;
// ----
// ParserError 1684: (0-16='pragma solidity;'): Found version pragma, but failed to parse it. Please ensure there is a trailing semicolon.
